--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta
+      name="google-site-verification"
+      content="mzaj1BRtj9Sd0iD0LwKk4AuPfk6pFtS3fCfMcQclyHc"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Allura&family=Handlee&family=Inter:ital,opsz,wght@1,14..32,100..900&family=Kalam:wght@700&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sacramento&display=swap"
       rel="stylesheet"
     />
+    <meta name="robots" content="index, follow" />
     <title>Abdul Salam | UI/UX Designer</title>
 
     <meta
@@ -23,17 +26,16 @@
     />
 
     <meta name="author" content="Abdul Salam" />
-    <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Abdul Salam | UI/UX Designer" />
     <meta
       property="og:description"
       content="Portfolio of Abdul Salam, UI/UX Designer skilled in Figma, Adobe XD, Balsamiq, and Miro."
     />
-    <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://salam-design.netlify.app/favicon.ico"
+      content="https://salam-design.netlify.app/og-image.png"
     />
+    <meta property="og:type" content="website" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://salam-design.netlify.app/" />
@@ -45,8 +47,32 @@
     />
     <meta
       name="twitter:image"
-      content="https://salam-design.netlify.app/favicon.ico"
+      content="https://salam-design.netlify.app/og-image.png"
     />
+    <link rel="canonical" href="https://salam-design.netlify.app/" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Abdul Salam",
+        "jobTitle": "UI/UX Designer",
+        "url": "https://salam-design.netlify.app/",
+        "image": "https://salam-design.netlify.app/og-image.png",
+        "email": "mailto:abdulsalam250502@gmail.com",
+        "knowsAbout": [
+          "UI Design",
+          "UX Design",
+          "Figma",
+          "Adobe XD",
+          "Wireframing",
+          "Prototyping"
+        ],
+        "sameAs": [
+          "https://www.linkedin.com/in/abdul-salam-h-m-236629221",
+          "https://www.behance.net/salamsalam40"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
