--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
       name="description"
       content="Abdul Salam – UI/UX Designer specializing in Figma, Adobe XD, Balsamiq, and Miro. Creating clean and user-friendly designs."
     />
-
-    <meta
-      name="keywords"
-      content="Abdul Salam, UI UX Designer, Figma Designer, Adobe XD, Balsamiq, Miro"
-    />
-
+    <meta property="og:site_name" content="Abdul Salam Portfolio">
     <meta name="author" content="Abdul Salam" />
     <meta property="og:title" content="Abdul Salam | UI/UX Designer" />
     <meta
